@@ -57,6 +57,7 @@
     <File name="./icons/C.Source.File.Empty" subtype="Code" buildaction="EmbedAsResource" />
     <File name="./Project/CProjectServiceExtension.cs" subtype="Code" buildaction="Compile" />
     <File name="./ChangeLog" subtype="Code" buildaction="Nothing" />
+    <File name="./Completion.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
